Fix bug: navbar link directed to root URL, not title.

--- a/app/partials/navbar.html
+++ b/app/partials/navbar.html
@@ -1,6 +1,6 @@
 <div class="navbar navbar-static-top">
     <div class="navbar-inner">
-        <a class="brand" href="/">Avenger!</a>
+        <a class="brand" href="#/title">Avenger!</a>
         <ul class="nav">
             <li><a href="#/new-game">New game</a></li>
             <li ng-show="gameState.inProgress"><a href="#/story">Current game</a></li>
