--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -1,6 +1,7 @@
 <div class="container">
     <ng-include src="'partials/navbar.html'"></ng-include>
-    <div class="row">
+    <div class="row pagearea">
+    <div class="row-fluid">
         <div class="span12">
             <h1>ABOUT THIS GAME</h1>
             <p>Way of the Tiger: Avenger is an old-school choose your own adventure story, in the style of the old
@@ -39,5 +40,6 @@
             <p>The copyright holder needs only to send a request to <a href="mailto:ashley@ropable.com">
             ashley@ropable.com</a>, and I will remove the application and project from public view.</p>
         </div>
+    </div>
     </div>
 </div>
