--- a/app/partials/background.html
+++ b/app/partials/background.html
@@ -1,8 +1,10 @@
 <div class="container">
     <ng-include src="'partials/navbar.html'"></ng-include>
-    <h1>BACKGROUND</h1>
-    <div class="row">
-        <div class="span7">
+    <div class="row pagearea">
+    <div class="row-fluid">
+        <div class="span12">
+            <h1>BACKGROUND</h1>
+            <img src="img/waytiger1-map.jpg" width="33%" class="img-polaroid pull-right"/>
             <p>On the magical world of Orb, alone in a sea that the people of the Manmarch call
             Endless, lies the mystical Island of Tranquil Dreams.</p>
             <p>Many years have passed since the time when, as an infant, you first saw its golden
@@ -53,8 +55,6 @@
             honed your skills helping the downtrodden in the Land of Plenty but now the time has
             come to prove yourself to your brother monks at the Temple of the Rock.</p>
         </div>
-        <div class="span5">
-            <img src="img/waytiger1-map.jpg" />
-        </div>
+    </div>
     </div>
 </div>
