--- a/app/partials/instructions.html
+++ b/app/partials/instructions.html
@@ -1,6 +1,7 @@
 <div class="container">
     <ng-include src="'partials/navbar.html'"></ng-include>
-    <div class="row">
+    <div class="row pagearea">
+    <div class="row-fluid">
         <div class="span12">
             <h1>INSTRUCTIONS</h1>
             <p>This is a choose-your-own-adventure story. Click on hyperlinks within the story text
@@ -65,5 +66,6 @@
             certain tools with you from the beginning of your adventure. These are noted on your
             character sheet.</p>
         </div>
+    </div>
     </div>
 </div>
