Added note about Kickstarter project to the about.html partial.

--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -3,6 +3,14 @@
     <div class="row pagearea">
     <div class="row-fluid">
         <div class="span12">
+            <div class="alert">
+                There is a <strong><a href="http://www.kickstarter.com/projects/1615043334/the-way-of-the-tiger-gamebooks-new-collectors-edit">Kickstarter project</a></strong>
+                to reproduce the original Way of the Tiger series in hardcover, with new artwork.
+                This project is not in any way affiliated with the Kickstarter, which is a
+                wonderful concept.<br>
+                Please check it out, and back it if you'd like to obtain this wonderful game book
+                series with a fresh new look.
+            </div>
             <h1>ABOUT THIS GAME</h1>
             <p>Way of the Tiger: Avenger is an old-school choose your own adventure story, in the style of the old
             Fighting Fantasy game books. You play a Ninja, worshipper of Kwon, Supreme Master of Unarmed Combat.
