--- a/app/partials/navbar.html
+++ b/app/partials/navbar.html
@@ -6,7 +6,7 @@
             <li ng-show="gameState.inProgress"><a href="#/story">Current game</a></li>
             <li><a href="#/background">Story background</a></li>
             <li><a href="#/instructions">Instructions</a></li>
-            <li><a href="#/about">About project</a></li>
+            <li><a href="#/about">About this game</a></li>
         </ul>
     </div>
 </div>
