Alter mailto on about.html

--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -28,7 +28,7 @@
             on the idea of converting the story to an interactive web application while hunting for an idea to
             learn AngularJS in greater detail.</p>
             <h4>COPYRIGHT STATEMENT</h4>
-            <p>This project is based upon a copyrighted work called
+            <p>This is a fan project based upon a copyrighted work called
             <a href="http://www.goodreads.com/book/show/1029651.Avenger_" target="_blank">Avenger</a>,
             to which I make no assertion of ownership. The authors are
             <a href="http://www.goodreads.com/author/show/40911.Mark_Smith" target="_blank">Mark Smith</a>
@@ -45,8 +45,8 @@
                 <li>It was undertaken as a learning activity.</li>
             </ol>
             <p>Doesn't really count as "fair use", but hope springs eternal eh?</p>
-            <p>The copyright holder needs only to send a request to <a href="mailto:ashley@ropable.com">
-            ashley@ropable.com</a>, and I will remove the application and project from public view.</p>
+            <p>The copyright holder needs only to send a request to <a href="mailto:grandmaster@ropable.com">grandmaster@ropable.com</a>,
+            and I will remove the application and project from public view.</p>
         </div>
     </div>
     </div>
