Added nice parchment background to pagearea. Added GameStateCtrl to static pages to provide scope.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -139,6 +139,7 @@ ul.handwritten {
     position: relative;
     padding: 20px;
     margin: 0 auto;
+    background: #fff url('../img/paper.jpg') repeat;
     background-color: #fff;
     -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
