Resolve issue #1, title screen was using incorrect controller.

--- a/app/partials/title.html
+++ b/app/partials/title.html
@@ -1,4 +1,4 @@
-<div class="jumbotron masthead" ng-controller="TitleCtrl">
+<div class="jumbotron masthead" ng-controller="GameStateCtrl">
     <div class="container">
         <p><img src="img/tiger.png" /></p>
         <h2>The Way of the Tiger</h2>
