--- a/app/partials/new_game.html
+++ b/app/partials/new_game.html
@@ -15,7 +15,10 @@
                 </label>
                 <br>
                 <label class="checkbox">
-                    <input type="checkbox" ng-model="gameState.cheatMode" />Cheat mode? (All skills, invulnerability in combat)
+                    <input type="checkbox" ng-model="gameState.cheatMode" />Cheat mode? (get all skills, invulnerability in combat)
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox" ng-model="gameState.noUndo" />No-undo mode? (removes the ability to 'undo' moves)
                 </label>
                 <!-- Disable the "begin" button until three skills are chosen -->
                 <button type="submit" class="btn btn-primary" ng-click="beginGame()" ng-disabled="chosenSkills.length < 3">
